# University-Projects

./: README.md
Graphics/cg_exercise_02/02_whitted/src/: CMakeLists.txt  main.cpp
Graphics_OpenGL/cg_exercise_02/02_whitted/: CMakeLists.txt
Graphics_OpenGL/cg_exercise_02/02_whitted/assignment_references/: box_after_a.tga  box_after_b.tga  box_after_e.tga  box_after_g.tga  box_start.tga  spheres_after_b.tga  spheres_start.tga
Graphics_OpenGL/cg_exercise_02/02_whitted/src/: exercise_02.cpp  exercise_02.cpp~
Graphics_OpenGL/cg_exercise_04/cglib/: CMakeCGLibSource.txt  CMakeLists.txt  CMakeListsExercises.txt
Graphics_OpenGL/cg_exercise_04/cglib/include/cglib/core/: camera.h  image.h  obj_mesh.h
Graphics_OpenGL/cg_exercise_04/cglib/include/cglib/rt/: bvh.h  intersection_tests.h  light.h  object.h  scene.h
Graphics_OpenGL/cg_exercise_04/cglib/lib/AntTweakBar/src/: LoadOGL.h  MiniGLFW.h  MiniGLUT.h  MiniSDL13.h  MiniSFML16.h  TwBar.cpp  TwColors.h  TwDirect3D10.cpp  TwDirect3D11.cpp  TwDirect3D11.h  TwDirect3D9.cpp  TwDirect3D9.h  TwEventGLFW.c  TwEventGLUT.c  TwEventSDL.c  TwEventSDL12.c  TwEventSFML.cpp  TwEventX11.c  TwFonts.cpp  TwFonts.h  TwGraph.h  TwMgr.cpp  TwOpenGL.h  TwOpenGLCore.cpp  TwPrecomp.h  resource.h
Graphics_OpenGL/cg_exercise_04/cglib/lib/glew/auto/src/: glew_head.c  glew_head.h  glew_license.h  glew_str_head.c  glew_str_wgl.c  glewinfo_head.c  glewinfo_tail.c  glewinfo_wgl.c  khronos_license.h  mesa_license.h  wglew_head.h  wglew_tail.h
Graphics_OpenGL/cg_exercise_04/cglib/lib/glew/include/GL/: glxew.h  wglew.h
Graphics_OpenGL/cg_exercise_04/cglib/lib/glew/src/: glew.c  visualinfo.c
Graphics_OpenGL/cg_exercise_04/cglib/lib/glfw/examples/: boing.c  particles.c  simple.c
Graphics_OpenGL/cg_exercise_04/cglib/lib/glfw/src/: context.c  egl_context.c  egl_context.h  glx_context.c  glx_context.h  init.c  linux_joystick.h  mir_monitor.c  mir_window.c  posix_time.c  posix_tls.h  wgl_context.c  win32_platform.h  winmm_joystick.c  wl_init.c  x11_init.c
Graphics_OpenGL/cg_exercise_04/cglib/lib/glm/glm/: ext.hpp  geometric.hpp  integer.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  packing.hpp  vec2.hpp
Graphics_OpenGL/cg_exercise_04/cglib/lib/glm/glm/detail/: _noise.hpp  _swizzle.hpp  func_common.hpp  func_geometric.inl  func_packing.hpp  func_packing.inl  func_vector_relational.hpp  glm.cpp  intrinsic_common.hpp  intrinsic_common.inl  intrinsic_exponential.inl  intrinsic_integer.hpp  intrinsic_trigonometric.inl  intrinsic_vector_relational.hpp  type_float.hpp  type_gentype.hpp  type_half.hpp  (+20 more)
Graphics_OpenGL/cg_exercise_04/cglib/src/core/: camera.cpp  gui.cpp  image.cpp
Graphics_OpenGL/cg_exercise_04/cglib/src/rt/: bvh.cpp  host_render.cpp  material.cpp  object.cpp  renderer.cpp  sampling_patterns.cpp  texture.cpp  texture_mapping.cpp  transform.cpp
(+1980 files in other folders)
